# SuperMarkets

./: .gitignore  README.md  pyproject.toml
docs/: 00-architecture-overview.md  01-core-flows.md  02-data-model-and-contracts.md  03-cloud-big-data-rationale.md  04-deployment-and-observability.md  supermarket_home.md
src/supermarkets/: __init__.py
